2009-09-22  Sebastien Pouliot  <sebastien@ximian.com>

	* _Assembly.cs: Remove Evidence and GlobalAssemblyCache 
	properties for NET_2_1
	* Marshal.cs: Avoid depending on SecureString for NET_2_1

2009-09-20  Sebastien Pouliot  <sebastien@ximian.com>

	* MarshalAsAttribute.cs: Remove VarEnum field for NET_2_1

2009-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Marshal.cs: Avoid depending on COM stuff for NET_2_1

2009-09-04  Zoltan Varga  <vargaz@gmail.com>

	* SafeBuffer.cs: Mark specific methods as non-cls compliant instead of
	the whole class.
	
	* SafeBuffer.cs: New net 4.0 class.

2009-04-17 Tom Hindle <tom_hindle@sil.org>

	* Marshal.cs: Improved GetExceptionForHR to return real C# exceptions in 
	certain cases instead of always COMException.

2009-02-24  Sebastien Pouliot  <sebastien@ximian.com>

	* SafeHandle.cs: Add default ctor in 2.1 profile (needed to compile
	new unit tests in moonlight).

2009-03-05  Tom Hindle <tom_hindle@sil.org>
	
	* Marshal.cs: Implemented GenerateGuidForType

2008-06-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* Marshal.cs: Fixed order of arguments for ArgumentException in
	GetComSlotForMethodInfo.

2008-06-19  Kornél Pál  <kornelpal@gmail.com>

	* Marshal.cs: Implement GetHINSTANCE.

2008-04-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* _EventInfo.cs
	* _FieldInfo.cs
 	* _MemberInfo.cs
	* _MethodBase.cs
	* _MethodInfo.cs
	* _PropertyInfo.cs
	* _Type.cs
	* ArrayWithOffset.cs
	* BestFitMappingAttribute.cs
	* Marshal.cs: Fix parameter names

2008-02-20  Zoltan Varga  <vargaz@gmail.com>

	* Marshal.cs (GetDelegateForFunctionPointer): Add a nullref check.

2008-02-03  Sebastien Pouliot  <sebastien@ximian.com>

	* COMException.cs: Fix new-line literal and use of "" detected by
	Gendarme.

2008-01-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* COMException.cs: Added missing colon in ToString.

2007-12-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* ExternalException.cs: Set HResult to match MS.
